# ride-hailing-app

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
wingz/: db.sqlite3
wingz/app/: routes.py
wingz/app/endpoints/: __init__.py  login_endpoint.py  permissions.py  report_endpoint.py  ride_endpoint.py  viewsets.py
wingz/app/management/commands/: seed.py
wingz/app/migrations/: 0001_initial.py  0002_ride.py  0002_rideevent.py  0003_alter_ride_dropoff_latitude_and_more.py
wingz/app/models/: __init__.py  fields.py  ride_event_model.py  ride_model.py  user_model.py
wingz/app/serializers/: __init__.py  login_serializer.py  ride_event_serializer.py  ride_serializer.py
wingz/app/tests/: factories.py  test_auth.py
wingz/config/: asgi.py  settings.py  urls.py  wsgi.py
